--- a/public/adminCat.ejs
+++ b/public/adminCat.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Client Home Page</title>
+        <title>Admin Home Page</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -12,26 +12,6 @@
               document.write("<li>" + key + ": " + policies[key] + "</li>");
             });
           </script>
-
-        <script>
-            //prefill data of user selected from dropdown in the edit_user page form
-            var urlMenu = document.getElementById('user1');
-            urlMenu.onchange= function() {
-                var useroption = this.options[this.selectedIndex];
-                if(useroption.value != "nothing")
-                {
-                    window.open(useroption.value,"users");
-                }
-            }
-
-        </script>
-        <script>
-            //delete/ remove user selected from dropdown
-            function fun_remove() {
-         var element = document.getElementById("user1");
-         element.remove(element.selectedIndex);
-      }
-        </script>
         <link rel="stylesheet" type="text/css" href="main.css">
 	</head>
     
@@ -82,30 +62,20 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <% if(policies.length || users.length ) {%>
-                             
-                                <%for(var i=0;i<policies.length; i++){%>
+                            <% if(policies.length){ for(var i=0;i<policies.length; i++){%>
+                             <!-- if(users.length){ for(var i=0;i<users.length; i++)  -->
                             <tr>
                                 
-                                
+
                                 <th scope="row">
                                     <%= (i+1)%></th>
                                 <td class="select"><%= policies[i].policy_name%></td>
                                 
                                 <td>
-                                    <form name ="myform">
-                                    <select id="user1">
-                                       
-                                        <%for(var x=0;x<users.length; x++){%>
-                                            <!-- value="users"  was removed-->
-                                            <option href="/edit_user" value="users">
-                                                <%= users[x].user_name%>
-                                            </option>
-                                            <% }%>
-                                            
-                                            
+                                    <select id="u1">
+                                        <option value="users"><%= users[i].user_name%></option>
                                     </select>
-                                </form>
+                                
             
                                 <td>
                                     <!-- Call to action buttons -->
@@ -114,33 +84,17 @@
                                             <button class="btn btn-primary btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Add"><i class="fa fa-table"></i></button>
                                         </li>
                                         <li class="list-inline-item">
-                                            <button  onclick="location.href='/update'" class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
+                                            <button class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></button>
                                         </li>
                                         <li class="list-inline-item">
-                                            <button class="btn btn-danger btn-sm rounded-0" type="button" onclick="fun_remove()" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
+                                            <button class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></button>
                                         </li>
                                     </ul>
-
-                                    
                                 </td>
-                                <!-- <p> The value of the option selected is:
-                                    <span class="output"></span>
-                                </p>                              -->
-                             
-                                <!-- <button onclick="getOption()"> Check option </button>
-
-                                <script type="text/javascript">
-                                    function getOption() {
-                                        selectElement = document.querySelector('#user1');
-                                        output = selectElement.value;
-                                        document.querySelector('.output').textContent = output;
-                                    }
-                                </script> -->
                             </td>
-                            
                             </tr>
-                            <% }%>
-                            <%  } else{ %>
+                            
+                            <% } }else{ %>
                                 <tr>
                                     <td colspan="3">No user</td>
                                 </tr>
