--- a/public/hope.ejs
+++ b/public/hope.ejs
@@ -6,12 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script>
-            // loop through the myObj object and generate <li> elements for each property
-            Object.keys(policies).forEach(function(key) {
-              document.write("<li>" + key + ": " + policies[key] + "</li>");
-            });
-          </script>
         <link rel="stylesheet" type="text/css" href="main.css">
 	</head>
     
@@ -40,12 +34,16 @@
 </nav>
 <br>
 <br>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="catalog.css">
+
 <!-- Start of Policy Catalog -->
+
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="catalog.css">
 <div class="container">
     <div class="shop-default shop-cards shop-tech">
-        <div class="row">
+        <div class="row"><% policies.forEach(policy => { %>
             <!-- Start of Product -->
             <div class="col-md-6">
                 <div class="block product no-border z-depth-2-top z-depth-2--hover">
@@ -59,11 +57,12 @@
                     <div class="block-body text-center" id = "plant_insurance">
                         <h3 class="heading heading-5 strong-600 text-capitalize">
                             <a href="#">
-                                {{}}
+                                <%=policy.policy_name%>
                             </a>
                         </h3>
                         <p class="product-description">
-                            ------------
+                            <%=policy.policy_decription%>
+                        </p>
                         <!-- <div class="product-colors mt-2">
                             <div class="color-switch float-wrapper">
                                 <a href="#" class="bg-purple"></a>
@@ -135,9 +134,11 @@
                 </div>
     
             </div>
-        </div>
+            <!-- End Of New Product -->
+        </div><%});%>
     </div>
 </div>
+<!-- End Of Policy Catalog -->
 
 <!-- End Of Policy Catalog -->
 <footer class="page-footer">
@@ -165,6 +166,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="main.js"></script>
-	</body>
-	
+	</body>	
 </html>
